# transformers_onmt

./: README.md  pyproject.toml
examples/: src_test_1000first.txt  src_train_1000first.txt  src_val_1000first.txt  tgt_test_1000first.txt  tgt_train_1000first.txt  tgt_val_1000first.txt
src/: transformers_onmt.py
