# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "transformers_onmt"
description = "Package to preprocess the data, train and perform inference of an OpenNMT-py transformer model"
version = '0.0.1'
readme = "README.md"
requires-python = ">=3.8.16"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "yves.grandjean@unibe.ch", name = "Yves Grandjean" },
]
#dynamic = ["version"]
dependencies = [
    "opennmt-py@git+https://github.com/reymond-group/OpenNMT-py#295798ca9487c0e9b3f3fa25aa18bfee919be4b2", 
    "torch==1.7.1",
    "torchvision==0.8.2",    
    ]


[tool.hatch.version]
#path = "src/__init__.py"
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]


#[project.scripts]
#balance = "uspto_balance.equilibrate:main"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

#[project.urls]
#homepage = "https://github.com/yvsgrndjn/uspto_balance"
#repository = "https://github.com/yvsgrndjn/uspto_balance"
